# openplate-fork

./: .gitignore  AGENTS.md  NOTICE  pyproject.toml  readme.fork.md  readme.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: commands.md  installation.md  template-parameters.md  templates.md
manual-tests/: case-1.md  case-2.md  case-3.md  case-4.md  cleanup-manual-tests.sh  index.md  run-manual-tests.sh
openspec/: config.yaml
openspec/changes/add-manual-tests-workflow/: design.md  proposal.md  tasks.md
openspec/changes/add-project-info-command/: design.md  proposal.md  tasks.md
openspec/changes/add-top-level-init-update-commands/: design.md  proposal.md  tasks.md
openspec/changes/clarify-project-root-and-repo-metadata/: design.md  proposal.md  tasks.md
openspec/changes/compact-prompts-json-node-ids/: design.md  proposal.md  tasks.md
openspec/changes/simplify-project-init-sources/: design.md  tasks.md  (+1 more)
scripts/: add_license.sh
src/auto-updater/: Dockerfile  entrypoint.sh
src/docker/: Dockerfile
src/openplate/: __init__.py  __main__.py  git.py  match.py  project_config_resolver.py  project_metadata_resolver.py  project_runtime_context.py  project_template_identity.py  shell_command_processor.py  sibling_template_resolver.py  template_loader.py  template_processor.py  temporary_folder.py  util.py
tests/: test_existing_runtime_regressions.py  test_project_config_legacy_fields.py  test_project_git_metadata.py  test_project_info_command.py  test_project_init_source_urls.py  test_project_runtime_context.py  test_prompt_document.py  test_prompt_json_cli.py
(+72 files in other folders)
